tests/diagnostics/file_roles/main_entrypoint/in_manifest/expect.txt
# exit: 1
input/PACKAGE.coppice:1:10: error: main is only allowed in .bin.coppice files
  function main() -> nil {
           ^
